--- a/res/layout/alumni_send_email.xml
+++ b/res/layout/alumni_send_email.xml
@@ -55,6 +55,7 @@
         android:id="@+id/buttonSend"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="Send" />
  
 </LinearLayout>
